# claude-plugins

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  conftest.py  coverage.xml  local-testing.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run-tests.sh
.claude-plugin/: marketplace.json
.claude/hooks/: bash_safety_hook.py  notify_action_required.py  observability_hook.py  run_all_tests.sh  run_tests.py  test_bash_safety_hook.py  test_notify_action_required.py  test_run_tests.py
.github/workflows/: tests.yml
docs/plans/: 2026-01-12-notifications-cross-platform-design.md  2026-01-12-notifications-cross-platform.md
observability/: __init__.py  dashboard.py  test_observability.py
plugins/bash-safety/: README.md
plugins/bash-safety/.claude-plugin/: plugin.json
plugins/bash-safety/hooks/: hooks.json
plugins/bash-safety/scripts/: bash_safety_hook.py
plugins/notifications/: README.md
plugins/notifications/.claude-plugin/: plugin.json
plugins/notifications/hooks/: hooks.json
plugins/notifications/scripts/: notify_action_required.py  notify_finished.py
plugins/observability/: README.md
plugins/observability/.claude-plugin/: plugin.json
plugins/observability/hooks/: hooks.json
plugins/test-runner/: README.md
plugins/test-runner/hooks/: hooks.json
shared/: __init__.py  logging.py
tests/bash-safety/: test_bash_safety_hook.py
tests/notifications/: test_notify_action_required.py
tests/observability/: test_observability.py
tests/shared/: test_logging.py
tests/test-runner/: test_run_tests.py
(+3 files in other folders)
